--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Assign PR to author
         uses: actions/github-script@v7
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{secrets.AUTO_ASSIGNEE_TOKEN}}
           script: |
             github.rest.issues.addAssignees({
               owner: context.repo.owner,
