--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.90.9",
+		"@tanstack/react-query-devtools": "^5.91.0",
+		"axios": "^1.13.2",
 		"clsx": "^2.1.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
