--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -1,8 +1,10 @@
-name: Auto Assign PR Author
+name: Auto Assign PR & ISSUE Author
 
 on:
   pull_request:
     types: [opened, ready_for_review]
+  issues:
+    types: [opened]
 
 permissions:
   pull-requests: write
@@ -12,14 +14,18 @@ jobs:
   assign-author:
     runs-on: ubuntu-latest
     steps:
-      - name: Assign PR to author
+      - name: Assign to author
         uses: actions/github-script@v7
         with:
           github-token: ${{secrets.AUTO_ASSIGNEE_TOKEN}}
           script: |
+            const assignee = context.payload.pull_request 
+              ? context.payload.pull_request.user.login 
+              : context.payload.issue.user.login;
+            
             github.rest.issues.addAssignees({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              assignees: [context.payload.pull_request.user.login]
+              assignees: [assignee]
             });
