--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"lint:fix": "eslint . --fix",
 		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\" --ignore-path .gitignore",
 		"format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\" --ignore-path .gitignore",
-		"preview": "vite preview"
+		"preview": "vite preview",
+    "size": "vite-size --total",
+    "size:detail": "vite-size",
+    "build:analyze": "vite build && vite-size --total"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.90.9",
@@ -42,10 +45,12 @@
 		"postcss": "^8.5.6",
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.7.1",
+		"rollup-plugin-visualizer": "^6.0.5",
 		"tailwindcss": "^4.1.17",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.46.3",
 		"vite": "^7.2.2",
-		"vite-plugin-svgr": "^4.5.0"
+		"vite-plugin-svgr": "^4.5.0",
+		"vite-size": "^0.0.6"
 	}
 }
