--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"clsx": "^2.1.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-error-boundary": "^6.0.0",
 		"react-router-dom": "^7.9.6",
 		"tailwind-merge": "^3.4.0"
 	},
