update: 추가된 라벨 정보 업데이트 #123

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -23,6 +23,12 @@ labels:
 
   "🛠️REFACTOR":
     include: ['\bRefactor\b', '\bREFACTOR\b', '\brefactor\b']
-  
+
   "🆙PERF":
     include: ['\bPerf\b', '\bPERF\b', '\bperf\b']
+
+  "🔎UPDATE":
+    include: ['\bUpdate\b', '\bUPDATE\b', '\bupdate\b']
+
+  "🚀DEPLOY":
+    include: ['\bDeploy\b', '\bDEPLOY\b', '\bdeploy\b']
